-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0-beta1
-
None
-
-
0242ab899 (15.0)
I've noticed that when building Creator itself from within Creator.
When filtering the Compile Output, I see quite a lot of warnings and the seem to get to the Issues pane correctly.
But probably when the build finishes, the warnings disappear from the Issues pane.
For Gerrit Dashboard: QTCREATORBUG-31760 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
596076,2 | QmlJSEditor: Do not clear out unrelated issues | 15.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |