QmlJSEditor: Do not clear out unrelated issues

Yet another fallout of 1b57e95c14d78119bbf8358bb52dfc1be0cde140.

Fixes: QTCREATORBUG-31760
Change-Id: Ia08e14a04eead91021c48598c0b42865fbc944bd
Reviewed-by: André Hartmann <aha_1980@gmx.de>